--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
 /** 
 >_ Code by Vy Nghia
 @Credit: https://github.com/jekelija/FacebookCommentDisplay (API + Library)
+
+[Important] 
+--> /js/facebookController.js
+--> /js/liveStateController.js
 **/
 const FB_APP_ID = "553766941703252"; //set app id
 
