--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 --> /js/liveStateController.js
 **/
 
-const FB_APP_ID = "553766941703252"; //set app id
+const FB_APP_ID = "your_app_id"; //set app id
 
 var first = false, matching = false, comments = [], rank = [], player = [];
 var kbb = ["Kéo", "Búa", "Bao", "Bao", "Kéo", "Búa", "Búa", "Bao", "Kéo", "Kéo", "Búa", "Bao", "Kéo", "Kéo", "Búa", "Búa", "Bao", "Bao"];
